# trpg

./: .gitignore  CMakeLists.txt  README.md
modules/: CMakeLists.txt
src/: characterAttributes.h  colorStruct.h  constants.h  game.cpp  game.h  gameController.cpp  gameController.h  imguiRenderer.cpp  imguiRenderer.h  main.cpp  messagesHistory.cpp  messagesHistory.h  player.cpp  player.h  renderer.cpp  renderer.h  save.cpp  save.h  saveController.cpp  saveController.h
